--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-hyperscript": "^3.0.0",
+    "uxt-react": "^5.3.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -24,6 +26,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^4.10.0",
+    "eslint-plugin-react": "^7.4.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
